Fix form labels being clipped while inside a dialog

--- a/src/app/opening/opening-detail-dialog/opening-detail-dialog.component.scss
+++ b/src/app/opening/opening-detail-dialog/opening-detail-dialog.component.scss
@@ -15,6 +15,7 @@ form {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 16px;
+  margin-top: 5px;
 }
 
 .mat-chip {
