--- a/src/app/users/user-detail-dialog/user-detail-dialog.component.scss
+++ b/src/app/users/user-detail-dialog/user-detail-dialog.component.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.column-layout .row-layout:first-of-type {
+  margin-top: 5px;
+}
+
 .fake-form-field {
   margin: 0.25em 0;
   padding: 0 0.75em 1.34375em 0.75em;
